<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:fillViewport="true"
    android:orientation="vertical"
    android:id="@+id/CalendarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:background="@drawable/main_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="105dp"
        android:fontFamily="@font/montserrat"
        android:text=""
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text=""
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toTopOf="@+id/day" />

    <TextView
        android:id="@+id/dayN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat"
        android:text=""
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/month" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CalendarView
                android:id="@+id/calendarView2"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="230dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/new_white_card"
                android:dateTextAppearance="@style/CalenderViewDateCustomText"
                android:elevation="5dp"
                android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/appointments"
                android:textColor="#4A4A4A"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendarView2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerviewSession"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@+id/text1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1"
                tools:listitem="@layout/session_row" />


            <TextView
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RecyclerviewSession"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/medicines"
                android:textColor="#4A4A4A"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1" />

            <TextView
                android:id="@+id/noMedicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/no_scheduled_medicines"
                android:textColor="@color/darkAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerViewMedicine"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@+id/text2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:scrollbars="none"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2"
                tools:listitem="@layout/medicine_row" />

            <TextView
                android:id="@+id/noAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/no_scheduled_appointments"
                android:textColor="@color/darkAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1" />


            <TextView
                android:id="@+id/text3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RecyclerviewSession"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/google_events"
                android:textColor="#4A4A4A"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerViewEvents"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/text2"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text3"
                tools:listitem="@layout/appointments_row" />

            <TextView
                android:id="@+id/noGoogleEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/no_scheduled_google_events"
                android:textColor="@color/darkAccent"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text3" />


            <TextView
                android:id="@+id/noMedApp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/no_scheduled_appointments_or_medicines_for_today"
                android:textColor="@color/darkAccent"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendarView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_expandable_110_250"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_add_symbol"
        app:aebAnimDurationMillis="175"
        app:aebButtonElevation="7dp"
        app:aebButtonGapDp="20dp"
        app:aebEndAngleDegree="180"
        app:aebIsSelectionMode="false"
        app:aebMainButtonSizeDp="45dp"
        app:aebRippleEffect="true"
        app:aebStartAngleDegree="90"
        app:aebSubButtonSizeDp="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddMedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/add_medicine"
        app:aebAnimDurationMillis="175"
        app:aebButtonElevation="7dp"
        app:aebButtonGapDp="20dp"
        app:aebEndAngleDegree="180"
        app:aebIsSelectionMode="false"
        app:aebMainButtonSizeDp="45dp"
        app:aebRippleEffect="true"
        app:aebStartAngleDegree="90"
        app:aebSubButtonSizeDp="35dp"
        app:layout_constraintBottom_toTopOf="@id/button_expandable_110_250"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddAppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/add_appointment"
        app:aebAnimDurationMillis="175"
        app:aebButtonElevation="7dp"
        app:aebButtonGapDp="20dp"
        app:aebEndAngleDegree="180"
        app:aebIsSelectionMode="false"
        app:aebMainButtonSizeDp="45dp"
        app:aebRippleEffect="true"
        app:aebStartAngleDegree="90"
        app:aebSubButtonSizeDp="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_expandable_110_250" />

</androidx.constraintlayout.widget.ConstraintLayout>
