...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.main.calendar.PatientMedicineDetailPage"
    android:id="@+id/PatientMedicineDetailPage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
...
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <TextView
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_below="@id/NameTV"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <TextView
        android:id="@+id/MFromDays"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:elevation="0dp"
...
        android:id="@+id/dash"
        android:layout_width="27dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=" - "
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/MTillDays"
        app:layout_constraintStart_toEndOf="@+id/MFromDays"
        app:layout_constraintTop_toBottomOf="@+id/DateTV" />

    <TextView
        android:id="@+id/MTillDays"
        android:layout_width="100dp"
...
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_clock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeTV" />

    <TextView
        android:id="@+id/MTime"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat"
...
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_tablet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoseTV" />

    <TextView
        android:id="@+id/MDose"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
...
