...
            app:layout_constraintBottom_toBottomOf="@+id/leftLine"
            app:layout_constraintEnd_toEndOf="@+id/leftLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text=""
            android:textColor="@color/darkAccent"
            android:textStyle="bold"
...
            android:background="@color/lightAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/session_date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/darkAccent"
            android:textSize="18sp"
            android:textStyle="bold"
...
